--- a/style.css
+++ b/style.css
@@ -26,6 +26,38 @@
 	background: #27acd9;
 }
 
+#select {
+    width: 600px;
+    margin: auto;
+    text-align: center;
+}
+
+.guide{
+    background: #fff425;
+    border: 2px dashed #000000;
+    border-radius: 10px;
+    box-shadow: 0 0 0 7px #fff425;
+    /* background:url(http://webcreatorbox.com/sample/images/check.png) repeat-x 0 25px; */
+    display: inline-block;
+    position: relative;
+    top: 150px;
+    font-size: 30px;
+    font-weight: 300;
+    /* font-family: z"Niko Moji", cursive; */
+    /* font-family: 'Cherry Bomb One', cursive; */
+    /* font-family: 'Darumadrop One', cursive; */
+    font-family: 'Aoboshi One', serif;
+    color: rgb(255, 255, 255);
+    text-shadow: -1px -1px 0 #000000;
+}
+#sel-btn {
+    position: relative;
+    top: 500px;
+}
+#sel-btn:hover {
+   
+}
+
 .reset {
     display: flex;
 }
